ADC_SRAM_UART.sdk/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
17:29:34 **** Incremental Build of configuration Debug for project ADC_SRAM_UART ****
make all 
make: Nothing to be done for 'all'.
17:29:45 **** Auto Build of configuration Debug for project ADC_SRAM_UART ****
make all 
'Building file: ../src/ADC_SRAM_UART.c'
'Invoking: MicroBlaze gcc compiler'
mb-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/ADC_SRAM_UART.o" -I../../ADC_SRAM_UART_bsp/microblaze_0/include -mlittle-endian -mcpu=v11.0 -mxl-soft-mul -Wl,--no-relax -ffunction-sections -fdata-sections -MMD -MP -MF"src/ADC_SRAM_UART.d" -MT"src/ADC_SRAM_UART.o" -o "src/ADC_SRAM_UART.o" "../src/ADC_SRAM_UART.c"
../src/ADC_SRAM_UART.c: In function 'main':
../src/ADC_SRAM_UART.c:161:38: warning: passing argument 2 of 'RxSamples' makes pointer from integer without a cast [-Wint-conversion]
   Status = RxSamples(&FifoInstance1, SRAMBaseAddr);
                                      ^~~~~~~~~~~~
../src/ADC_SRAM_UART.c:50:5: note: expected 'u32 * {aka long unsigned int *}' but argument is of type 'u32 {aka long unsigned int}'
 int RxSamples(XLlFifo *InstancePtr, u32 *DestinationAddr);
     ^~~~~~~~~
../src/ADC_SRAM_UART.c:168:38: warning: passing argument 2 of 'RxSamples' makes pointer from integer without a cast [-Wint-conversion]
   Status = RxSamples(&FifoInstance2, SRAMBaseAddr + (SAMPLES_PER_ADC));
                                      ^~~~~~~~~~~~
../src/ADC_SRAM_UART.c:50:5: note: expected 'u32 * {aka long unsigned int *}' but argument is of type 'long unsigned int'
 int RxSamples(XLlFifo *InstancePtr, u32 *DestinationAddr);
     ^~~~~~~~~
../src/ADC_SRAM_UART.c: In function 'SpiProgramOsc':
../src/ADC_SRAM_UART.c:329:32: error: 'Registers' undeclared (first use in this function)
  XSpi_Transfer(SpiInstancePtr, Registers[0], NULL, 24);
                                ^~~~~~~~~
../src/ADC_SRAM_UART.c:329:32: note: each undeclared identifier is reported only once for each function it appears in
make: *** [src/subdir.mk:23: src/ADC_SRAM_UART.o] Error 1
17:29:52 **** Auto Build of configuration Debug for project ADC_SRAM_UART ****
make all 
'Building file: ../src/ADC_SRAM_UART.c'
'Invoking: MicroBlaze gcc compiler'
mb-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/ADC_SRAM_UART.o" -I../../ADC_SRAM_UART_bsp/microblaze_0/include -mlittle-endian -mcpu=v11.0 -mxl-soft-mul -Wl,--no-relax -ffunction-sections -fdata-sections -MMD -MP -MF"src/ADC_SRAM_UART.d" -MT"src/ADC_SRAM_UART.o" -o "src/ADC_SRAM_UART.o" "../src/ADC_SRAM_UART.c"
../src/ADC_SRAM_UART.c: In function 'main':
../src/ADC_SRAM_UART.c:161:38: warning: passing argument 2 of 'RxSamples' makes pointer from integer without a cast [-Wint-conversion]
   Status = RxSamples(&FifoInstance1, SRAMBaseAddr);
                                      ^~~~~~~~~~~~
../src/ADC_SRAM_UART.c:50:5: note: expected 'u32 * {aka long unsigned int *}' but argument is of type 'u32 {aka long unsigned int}'
 int RxSamples(XLlFifo *InstancePtr, u32 *DestinationAddr);
     ^~~~~~~~~
../src/ADC_SRAM_UART.c:168:38: warning: passing argument 2 of 'RxSamples' makes pointer from integer without a cast [-Wint-conversion]
   Status = RxSamples(&FifoInstance2, SRAMBaseAddr + (SAMPLES_PER_ADC));
                                      ^~~~~~~~~~~~
../src/ADC_SRAM_UART.c:50:5: note: expected 'u32 * {aka long unsigned int *}' but argument is of type 'long unsigned int'
 int RxSamples(XLlFifo *InstancePtr, u32 *DestinationAddr);
     ^~~~~~~~~
'Finished building: ../src/ADC_SRAM_UART.c'
' '
'Building target: ADC_SRAM_UART.elf'
'Invoking: MicroBlaze gcc linker'
mb-gcc -Wl,-T -Wl,../src/lscript.ld -L../../ADC_SRAM_UART_bsp/microblaze_0/lib -mlittle-endian -mcpu=v11.0 -mxl-soft-mul -Wl,--no-relax -Wl,--gc-sections -o "ADC_SRAM_UART.elf"  ./src/ADC_SRAM_UART.o   -Wl,--start-group,-lxil,-lgcc,-lc,--end-group
'Finished building target: ADC_SRAM_UART.elf'
' '
'Invoking: MicroBlaze Print Size'
mb-size ADC_SRAM_UART.elf  |tee "ADC_SRAM_UART.elf.size"
   text	   data	    bss	    dec	    hex	filename
  15824	    400	   3440	  19664	   4cd0	ADC_SRAM_UART.elf
'Finished building: ADC_SRAM_UART.elf.size'
' '
17:30:00 **** Incremental Build of configuration Debug for project ADC_SRAM_UART ****
make all 
make: Nothing to be done for 'all'.
